k8s/auth-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
